Implementazione di UC-3(ricerca nota), inserimento nuovo logo e modifiche spazi su css

--- a/noting-server/src/main/webapp/Noting.html
+++ b/noting-server/src/main/webapp/Noting.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1> Noting App </h1>
+    <img src="images/Noting-App.ico" alt="Logo Noting App" id="logo">
     
     <div id="root"></div>
 
